--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
 <div class="container">
     <section id="about" class="fixed-section">
         <div class="about-container">
-            <div class="profile">
-                <img src="DALL·E 2023-12-05 20.43.17.png" alt="Photo de John Doe" class="profile-picture">
-            </div>
             <div class="description">
-                <h1>John Doe</h1>
-                <p>Analyste développeur</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                <div class="image-container">
+                    <div class="profile">
+                        <img src="DALL·E 2023-12-05 20.43.17.png" alt="Photo de John Doe" class="profile-picture">
+                    </div>
+                    <div class="text-container">
+                        <p class="overlay">Analyste développeur</p>
+                        <h1 class="overlayH">John Doe</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
